fixed padding on mobile version

--- a/assets/css/user-card.css
+++ b/assets/css/user-card.css
@@ -108,4 +108,7 @@
     .userCard::after {
         display: none;
     }
+    .userPersonalInfo {
+        padding-bottom: 14%;
+    }
 }
